--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Hwakyong Yoo
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: 깃허브에 대하여 공부하고 있습니다.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -18,10 +18,10 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: hwakyongyoo@naver.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: hwakyong-Yoo
   instagram:
   linkedin:
   pinterest:
